syntax = "proto3";

package tamsilcms.agent.ipc.v1;

// Canonical IPC schema. Generated code is used by Rust and C++.
// Versioning: the envelope contains schema_version and message_type.

message Envelope {
  uint32 schema_version = 1;
  string asset_id = 2;
  string agent_id = 3;
  uint64 unix_time_ms = 4;
  oneof payload {
    SensorEvent sensor_event = 10;
    ExecutionCommand execution_command = 11;
    ExecutionResult execution_result = 12;
    EvidencePackage evidence_package = 13;
    HealthHeartbeat health_heartbeat = 14;
    ComplianceAssertion compliance_assertion = 15;
  }
}

message SensorEvent {
  EventType event_type = 1;
  oneof details {
    ProcessStart process_start = 10;
    ProcessStop process_stop = 11;
    FileWrite file_write = 12;
    RegistryChange registry_change = 13;
    NetworkConnection network_connection = 14;
  }
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_PROCESS_START = 1;
  EVENT_TYPE_PROCESS_STOP = 2;
  EVENT_TYPE_FILE_WRITE = 3;
  EVENT_TYPE_REGISTRY_CHANGE = 4;
  EVENT_TYPE_NETWORK_CONNECTION = 5;
}

message ProcessStart {
  uint32 pid = 1;
  uint32 ppid = 2;
  string image_path = 3;
  string command_line = 4;
  uint64 unix_time_ms = 5;
}

message ProcessStop {
  uint32 pid = 1;
  uint32 exit_code = 2;
  uint64 unix_time_ms = 3;
}

message FileWrite {
  string path = 1;
  string process_image = 2;
  uint32 pid = 3;
  uint64 unix_time_ms = 4;
}

message RegistryChange {
  string hive = 1;
  string key_path = 2;
  string value_name = 3;
  string operation = 4;
  uint32 pid = 5;
  uint64 unix_time_ms = 6;
}

message NetworkConnection {
  string local_address = 1;
  uint32 local_port = 2;
  string remote_address = 3;
  uint32 remote_port = 4;
  string protocol = 5;
  uint32 pid = 6;
  uint64 unix_time_ms = 7;
}

message ExecutionCommand {
  string command_id = 1;
  string signed_blob = 2;
  string action = 3;
  repeated string arguments = 4;
  uint64 not_before_unix_time_ms = 5;
  uint64 not_after_unix_time_ms = 6;
}

message ExecutionResult {
  string command_id = 1;
  int32 exit_code = 2;
  bytes stdout_data = 3;
  bytes stderr_data = 4;
  uint64 completed_unix_time_ms = 5;
}

message EvidencePackage {
  string evidence_id = 1;
  string case_id = 2;
  bytes payload = 3;
  string sha256 = 4;
  uint64 captured_unix_time_ms = 5;
}

message HealthHeartbeat {
  string service_name = 1;
  uint64 unix_time_ms = 2;
}

message ComplianceAssertion {
  string control_id = 1;
  bool passed = 2;
  string evidence_ref = 3;
  uint64 evaluated_unix_time_ms = 4;
}
